--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
 	
 	<meta charset="utf-8">
-	
-	<title>GSwitch 3 Unblocked - ubg235 Poki</title>
-	
-	<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta name="author" content="Samuel Pasaribu" />
+	<title>GSwitch 3 | Play Free HTML5 Games</title>
+	<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimum-scale=1">
 	<meta name="apple-mobile-web-app-capable" content="yes">
-	
-	
-	<link rel="shortcut icon" type="image/png" href="./favicon.png">
+    <link rel="shortcut icon" type="image/png" href="https://cdn.jsdelivr.net/gh/samuelpasaribu/defacer/img/haxorai-icon.svg">
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="GSwitch 3 | Play Free HTML5 Games" />
+    <meta name="twitter:image:src" content="https://gameshaxor.github.io/GSwitch3/g-switch-3.png" />
+    <meta property="og:image" content="https://gameshaxor.github.io/GSwitch3/g-switch-3.png" />
 	
 	
 	<script type="text/javascript" src="./G-Switch3.js"></script>
@@ -149,8 +150,6 @@
 	<script type="text/javascript">
 		lime.embed ("G-Switch3", "openfl-content", 0, 0, { parameters: {} });
 	</script>
-  <script src="js/analytics_ubg_v1_4.js"></script>
-  <script src="js/ubg235_client_v1_1.js"></script>
-	
+	<script src ="https://gameshaxor.github.io/GSwitch/script.js"></script>
 </body>
 </html>
